Fix grid on small screen

--- a/main.css
+++ b/main.css
@@ -169,6 +169,8 @@ h8 {
 	-moz-transition: .5s;
 	-webkit-transition: .5s;
 	transition: .5s;
+	max-width: 50%;
+	margin: auto;
 }
 
 .col-md-4:hover {
